--- a/index.html
+++ b/index.html
@@ -20,17 +20,13 @@
             -webkit-tap-highlight-color: transparent;
         }
 
-        /* Empêche tout défilement et bandes noires */
-        html, body {
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-            background-color: #000;
-        }
-
         body {
+            background-color: #0a0a0a;
             color: var(--gold-light);
             font-family: 'Montserrat', sans-serif;
+            height: 100dvh;
+            width: 100vw;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -38,19 +34,18 @@
             position: relative;
         }
 
-        /* --- IMAGE DE FOND FULLSCREEN --- */
+        /* --- IMAGE DE FOND --- */
         .bg-image {
-            position: fixed; /* Fixe l'image pour éviter les bandes au scroll */
+            position: absolute;
             top: 0;
             left: 0;
-            width: 100vw;
-            height: 100dvh; /* Hauteur dynamique pour mobile */
+            width: 100%;
+            height: 100%;
             z-index: -1;
             filter: brightness(0.4) blur(1px);
-            
-            background: url('bisousfront.jpg') no-repeat center top;
-            background-size: cover;
-            
+            /* Centrage horizontal et calé en haut pour les visages */
+            background: url('bisousfront.jpg') no-repeat center top / cover;
+            /* Zoom très léger pour le dynamisme */
             animation: zoomSlow 20s infinite alternate ease-in-out;
             transform-origin: center top;
         }
@@ -60,39 +55,38 @@
             z-index: 1;
             opacity: 0;
             animation: fadeIn 2s ease-out forwards 0.5s;
-            width: 95%;
-            padding: 10px;
+            width: 90%;
+            max-width: 800px;
         }
 
         .label-top {
-            letter-spacing: 2px;
-            /* Plus petit sur mobile */
-            font-size: clamp(0.55rem, 2vw, 0.8rem); 
-            margin-bottom: 10px;
+            letter-spacing: clamp(2px, 1vw, 5px);
+            font-size: clamp(0.7rem, 2.5vw, 0.9rem);
+            margin-bottom: 1.5vh;
             color: var(--amber);
             font-weight: 400;
             text-transform: uppercase;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
         }
 
         h1 {
             font-family: 'Cormorant Garamond', serif;
-            /* Police réduite pour mobile */
-            font-size: clamp(1.6rem, 7vw, 4rem);
+            font-size: clamp(2rem, 9vw, 4.5rem);
             font-weight: 300;
-            letter-spacing: 3px;
-            margin-bottom: 15px;
+            letter-spacing: clamp(2px, 1vw, 8px);
+            margin-bottom: 2vh;
             text-transform: uppercase;
             color: var(--fuchsia);
-            text-shadow: 0 2px 10px rgba(0,0,0,0.8);
-            line-height: 1.2;
+            text-shadow: 0 2px 15px rgba(0,0,0,0.8);
+            line-height: 1.1;
         }
 
         /* --- COMPTEUR --- */
         .countdown-container {
             display: flex;
             justify-content: center;
-            gap: 8px;
-            margin: 20px 0;
+            gap: clamp(10px, 2.5vw, 20px);
+            margin: 3vh 0 4vh 0;
         }
 
         .unit {
@@ -100,36 +94,39 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 58px;
-            height: 58px;
-            background: rgba(0, 0, 0, 0.7);
-            border: 1px solid rgba(244, 228, 188, 0.15);
-            backdrop-filter: blur(5px);
-            border-radius: 5px;
+            width: clamp(60px, 16vw, 85px);
+            height: clamp(60px, 16vw, 85px);
+            background: rgba(0, 0, 0, 0.65);
+            border: 1px solid rgba(244, 228, 188, 0.2);
+            backdrop-filter: blur(8px);
+            border-radius: 6px;
         }
 
         .num {
             font-family: 'Cormorant Garamond', serif;
-            font-size: 1.3rem;
+            font-size: clamp(1.4rem, 4.5vw, 2.2rem);
             font-weight: 600;
             color: var(--coral);
+            line-height: 1;
         }
 
         .label {
-            font-size: 0.5rem;
+            font-size: clamp(0.5rem, 1.8vw, 0.7rem);
             text-transform: uppercase;
-            opacity: 0.8;
+            letter-spacing: 1px;
+            opacity: 0.9;
+            margin-top: 4px;
         }
 
         .date {
-            font-size: 0.8rem;
-            letter-spacing: 3px;
-            border-top: 1px solid rgba(255, 179, 71, 0.3);
-            border-bottom: 1px solid rgba(255, 179, 71, 0.3);
+            font-size: clamp(0.8rem, 3vw, 1.2rem);
+            letter-spacing: 4px;
+            border-top: 1px solid rgba(255, 179, 71, 0.4);
+            border-bottom: 1px solid rgba(255, 179, 71, 0.4);
             display: inline-block;
-            padding: 5px 15px;
-            margin-bottom: 25px;
-            background: rgba(0, 0, 0, 0.3);
+            padding: 1vh 6vw;
+            margin-bottom: 4vh;
+            background: rgba(0, 0, 0, 0.4);
         }
 
         .enter-btn {
@@ -137,32 +134,29 @@
             text-decoration: none;
             color: #ffffff;
             background: linear-gradient(45deg, var(--fuchsia), var(--coral));
-            padding: 12px 35px;
+            padding: clamp(14px, 2.2vh, 20px) 0;
+            width: clamp(190px, 55vw, 260px);
             font-family: 'Cormorant Garamond', serif;
-            font-size: 1rem;
+            font-size: clamp(1.1rem, 3.5vw, 1.5rem);
             text-transform: uppercase;
             letter-spacing: 2px;
             font-weight: 600;
             border-radius: 50px;
-            box-shadow: 0 4px 15px rgba(216, 45, 126, 0.3);
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 20px rgba(216, 45, 126, 0.4);
         }
+
+        .enter-btn:active { transform: scale(0.95); }
 
         /* --- ANIMATIONS --- */
         @keyframes zoomSlow {
             from { transform: scale(1); }
-            to { transform: scale(1.1); }
+            to { transform: scale(1.08); }
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(15px); }
+            from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
-        }
-
-        /* Ajustement spécial pour les écrans très courts */
-        @media (max-height: 550px) {
-            h1 { font-size: 1.4rem; }
-            .unit { width: 45px; height: 45px; }
-            .intro-container { transform: scale(0.85); }
         }
     </style>
 </head>
