--- a/invitation.html
+++ b/invitation.html
@@ -23,12 +23,14 @@
             overflow-x: hidden;
             background-image: radial-gradient(circle at center, #ffffff 0%, #F2EEE5 100%);
             line-height: 1.5;
+            position: relative;
         }
 
         .cormorant { font-family: 'Cormorant Garamond', serif; }
 
+        /* --- HEADER --- */
         header {
-            height: 50vh;
+            height: 55vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -39,21 +41,29 @@
         }
 
         .logo-main {
-            width: clamp(150px, 40vw, 250px);
+            width: clamp(150px, 40vw, 220px);
             filter: drop-shadow(0 4px 10px rgba(0,0,0,0.1));
             margin-bottom: 15px;
+            opacity: 0.7; /* Opacité réduite demandée */
+            animation: float 4s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
         }
 
         .container {
-            max-width: 650px; /* Plus étroit pour éviter l'étalement */
+            max-width: 650px;
             margin: -30px auto 40px;
             padding: 0 15px;
             position: relative;
             z-index: 10;
         }
 
+        /* --- CARTES --- */
         .wedding-card {
-            background: #fff;
+            background: rgba(255, 255, 255, 0.95);
             border-radius: 15px;
             padding: 25px 20px;
             margin-bottom: 25px;
@@ -61,6 +71,7 @@
             box-shadow: 0 10px 25px rgba(0,0,0,0.05);
             text-align: center;
             position: relative;
+            backdrop-filter: blur(5px);
         }
 
         .wedding-card::before {
@@ -70,47 +81,39 @@
             background: linear-gradient(90deg, var(--fuchsia), var(--coral), var(--amber));
         }
 
-        .card-type {
-            font-size: 0.7rem;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-            color: var(--fuchsia);
-            margin-bottom: 10px;
-            font-weight: 600;
+        /* --- SECTIONS IMAGES --- */
+        .image-section {
+            width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+            overflow: hidden;
+            transition: transform 0.5s cubic-bezier(0.165, 0.84, 0.44, 1), box-shadow 0.5s ease;
+            cursor: pointer;
+            position: relative;
+            margin: 25px 0;
         }
 
-        .card-title {
-            font-size: clamp(1.8rem, 6vw, 2.5rem);
-            color: var(--amber);
-            margin-bottom: 10px;
+        /* Agrandissement spécifique pour la bague */
+        .img-bague {
+            height: 450px; /* Plus grand comme demandé */
+            background: url('bague.JPG') no-repeat center center / cover;
         }
 
-        .highlight {
-            color: var(--fuchsia);
-            font-weight: 600;
-            display: block;
-            margin: 5px 0;
-            font-size: 1.1rem;
+        .img-maison {
+            height: 250px;
+            background: url('maison.JPG') no-repeat center center / cover;
         }
 
-        .location-hint {
-            font-size: 0.85rem;
-            color: #777;
-            font-style: italic;
-            margin-top: 5px;
+        .image-section:hover {
+            transform: scale(1.02);
+            box-shadow: 0 12px 30px rgba(216, 45, 126, 0.2);
         }
 
-        /* --- FORMULAIRE COMPACT --- */
-        .rsvp-form { text-align: left; margin-top: 20px; }
-        .form-group { margin-bottom: 15px; }
-        label {
-            display: block; font-size: 0.75rem; font-weight: 600;
-            margin-bottom: 5px; color: #555; text-transform: uppercase;
-        }
-        input, select, textarea {
-            width: 100%; padding: 10px; border: 1px solid #e0e0e0;
-            border-radius: 8px; font-family: inherit; font-size: 0.95rem;
-        }
+        /* --- TEXTES & BOUTONS --- */
+        .card-type { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 3px; color: var(--fuchsia); margin-bottom: 10px; font-weight: 600; }
+        .card-title { font-size: clamp(1.8rem, 6vw, 2.5rem); color: var(--amber); margin-bottom: 10px; }
+        .highlight { color: var(--fuchsia); font-weight: 600; display: block; margin: 5px 0; font-size: 1.1rem; }
+        .location-hint { font-size: 0.85rem; color: #777; font-style: italic; margin-top: 5px; }
 
         .btn-action {
             display: inline-flex; justify-content: center; width: 100%;
@@ -125,29 +128,44 @@
             margin-top: 10px; width: auto; padding: 8px 20px; font-size: 0.8rem;
         }
 
-        .image-section {
-            width: 100%; height: 250px; margin: 25px 0;
-            border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.08);
-        }
-        .img-bague { background: url('bague.JPG') no-repeat center center / cover; }
-        .img-maison { background: url('maison.JPG') no-repeat center center / cover; }
+        /* --- RSVP FORM --- */
+        .rsvp-form { text-align: left; margin-top: 20px; }
+        .form-group { margin-bottom: 15px; }
+        label { display: block; font-size: 0.75rem; font-weight: 600; margin-bottom: 5px; color: #555; text-transform: uppercase; }
+        input, select, textarea { width: 100%; padding: 10px; border: 1px solid #e0e0e0; border-radius: 8px; font-family: inherit; font-size: 0.95rem; }
 
         footer { text-align: center; padding: 40px 20px; background: white; }
 
-        .reveal { opacity: 0; transform: translateY(20px); transition: 0.6s ease-out; }
+        .reveal { opacity: 0; transform: translateY(20px); transition: 0.8s ease-out; }
         .reveal.active { opacity: 1; transform: translateY(0); }
 
+        /* --- PÉTALES ÉLÉGANTS --- */
+        .petal {
+            position: fixed;
+            background: linear-gradient(135deg, #fff5f7 0%, #ffc0cb 100%);
+            border-radius: 150% 0 150% 0;
+            opacity: 0;
+            pointer-events: none;
+            z-index: 9999;
+            box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+        }
+
+        @keyframes fall {
+            0% { transform: translateY(-10vh) translateX(0) rotate(0deg); opacity: 0; }
+            10% { opacity: 0.8; }
+            90% { opacity: 0.8; }
+            100% { transform: translateY(105vh) translateX(var(--x-end)) rotate(var(--r-end)); opacity: 0; }
+        }
+
         @media (max-width: 480px) {
-            .container { margin-top: -20px; }
-            .wedding-card { padding: 20px 15px; }
-            .image-section { height: 200px; }
+            .img-bague { height: 350px; } /* Ajustement mobile */
         }
     </style>
 </head>
 <body>
 
 <header>
-    <img src="logo.JPG" alt="Karen & Yossef" class="logo-main">
+    <img src="logo2.png" alt="Karen & Yossef" class="logo-main">
     <p class="cormorant" style="font-size: 1.4rem; color: var(--amber); font-style: italic;">Sous le regard de Hachem</p>
 </header>
 
@@ -176,7 +194,7 @@
             <p class="location-hint">(À 1 heure de Paris)</p>
             Début de la cérémonie : <span style="color:var(--coral); font-weight:600;">16H30</span>
         </div>
-        <a href="https://waze.com/ul?q=Chateau+des+Hauts+de+Provins" target="_blank" class="btn-action btn-outline" style="margin-top: 15px;">Ouvrir Waze</a>
+        <a href="https://waze.com/ul?q=Ferreux+77560+Champcenest" target="_blank" class="btn-action btn-outline" style="margin-top: 15px;">Y aller avec Waze</a>
     </div>
 
     <div class="wedding-card reveal">
@@ -202,7 +220,7 @@
                 <label>Un message ?</label>
                 <textarea name="msg" rows="2"></textarea>
             </div>
-            <button type="submit" class="btn-action">Confirmer</button>
+            <button type="submit" class="btn-action">Confirmer ma présence</button>
         </form>
     </div>
 
@@ -219,6 +237,7 @@
         const presence = document.getElementById('presence').value;
         document.getElementById('guest-count-group').style.display = (presence === 'non') ? 'none' : 'block';
     }
+
     function reveal() {
         var reveals = document.querySelectorAll(".reveal");
         for (var i = 0; i < reveals.length; i++) {
@@ -229,6 +248,26 @@
     }
     window.addEventListener("scroll", reveal);
     reveal();
+
+    function createPetal() {
+        const petal = document.createElement('div');
+        petal.classList.add('petal');
+        const size = Math.random() * 15 + 10;
+        const startX = Math.random() * window.innerWidth;
+        const xEndOffset = (Math.random() - 0.5) * 300;
+        const duration = Math.random() * 5 + 7;
+        const rotationEnd = Math.random() * 360 + 180;
+        petal.style.width = `${size}px`;
+        petal.style.height = `${size * 1.2}px`;
+        petal.style.left = `${startX}px`;
+        petal.style.top = `-20px`;
+        petal.style.setProperty('--x-end', `${xEndOffset}px`);
+        petal.style.setProperty('--r-end', `${rotationEnd}deg`);
+        petal.style.animation = `fall ${duration}s linear forwards`;
+        document.body.appendChild(petal);
+        setTimeout(() => { petal.remove(); }, duration * 1000);
+    }
+    setInterval(createPetal, 400);
 </script>
 </body>
 </html>
