--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Karen & Yossef | L'Union</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,400&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
             --fuchsia: #D82D7E;
@@ -34,7 +34,6 @@
             position: relative;
         }
 
-        /* --- IMAGE DE FOND --- */
         .bg-image {
             position: absolute;
             top: 0;
@@ -43,50 +42,46 @@
             height: 100%;
             z-index: -1;
             filter: brightness(0.4) blur(1px);
-            /* Centrage horizontal et calé en haut pour les visages */
             background: url('bisousfront.jpg') no-repeat center top / cover;
-            /* Zoom très léger pour le dynamisme */
-            animation: zoomSlow 20s infinite alternate ease-in-out;
+            animation: zoomSlow 15s infinite alternate ease-in-out;
             transform-origin: center top;
         }
 
-        /* --- CONTENU --- */
         .intro-container {
             z-index: 1;
             opacity: 0;
             animation: fadeIn 2s ease-out forwards 0.5s;
-            width: 90%;
-            max-width: 800px;
-        }
-
-        .label-top {
-            letter-spacing: clamp(2px, 1vw, 5px);
-            font-size: clamp(0.7rem, 2.5vw, 0.9rem);
-            margin-bottom: 1.5vh;
-            color: var(--amber);
-            font-weight: 400;
-            text-transform: uppercase;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+            width: 100%;
+            padding: 0 20px;
         }
 
         h1 {
-            font-family: 'Cormorant Garamond', serif;
-            font-size: clamp(2rem, 9vw, 4.5rem);
-            font-weight: 300;
-            letter-spacing: clamp(2px, 1vw, 8px);
-            margin-bottom: 2vh;
-            text-transform: uppercase;
-            color: var(--fuchsia);
-            text-shadow: 0 2px 15px rgba(0,0,0,0.8);
-            line-height: 1.1;
+            font-family: 'Great Vibes', cursive;
+            font-size: clamp(3.5rem, 15vw, 5.5rem);
+            font-weight: 400;
+            margin-bottom: 5px;
+            color: #fff;
+            text-shadow: 2px 2px 20px rgba(0,0,0,0.8);
+            background: linear-gradient(to bottom, #fff, var(--gold-light));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
-        /* --- COMPTEUR --- */
+        .subtitle {
+            font-family: 'Montserrat', sans-serif;
+            letter-spacing: 5px;
+            font-size: 0.75rem;
+            margin-bottom: 10px;
+            color: var(--amber);
+            text-transform: uppercase;
+        }
+
+        /* --- CHRONO CARRÉ --- */
         .countdown-container {
             display: flex;
             justify-content: center;
-            gap: clamp(10px, 2.5vw, 20px);
-            margin: 3vh 0 4vh 0;
+            gap: 12px;
+            margin: 30px 0 40px 0;
         }
 
         .unit {
@@ -94,24 +89,23 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: clamp(60px, 16vw, 85px);
-            height: clamp(60px, 16vw, 85px);
-            background: rgba(0, 0, 0, 0.65);
+            width: 65px;
+            height: 65px;
+            background: rgba(0, 0, 0, 0.6);
             border: 1px solid rgba(244, 228, 188, 0.2);
             backdrop-filter: blur(8px);
-            border-radius: 6px;
+            border-radius: 4px; /* Forme carrée */
         }
 
         .num {
-            font-family: 'Cormorant Garamond', serif;
-            font-size: clamp(1.4rem, 4.5vw, 2.2rem);
+            font-size: 1.4rem;
             font-weight: 600;
-            color: var(--coral);
+            color: #fff;
             line-height: 1;
         }
 
         .label {
-            font-size: clamp(0.5rem, 1.8vw, 0.7rem);
+            font-size: 0.55rem;
             text-transform: uppercase;
             letter-spacing: 1px;
             opacity: 0.9;
@@ -119,14 +113,15 @@
         }
 
         .date {
-            font-size: clamp(0.8rem, 3vw, 1.2rem);
-            letter-spacing: 4px;
-            border-top: 1px solid rgba(255, 179, 71, 0.4);
-            border-bottom: 1px solid rgba(255, 179, 71, 0.4);
+            font-size: 1rem;
+            letter-spacing: 5px;
+            padding: 10px 0;
+            margin-bottom: 40px;
+            font-weight: 200;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             display: inline-block;
-            padding: 1vh 6vw;
-            margin-bottom: 4vh;
-            background: rgba(0, 0, 0, 0.4);
+            min-width: 250px;
         }
 
         .enter-btn {
@@ -134,29 +129,36 @@
             text-decoration: none;
             color: #ffffff;
             background: linear-gradient(45deg, var(--fuchsia), var(--coral));
-            padding: clamp(14px, 2.2vh, 20px) 0;
-            width: clamp(190px, 55vw, 260px);
-            font-family: 'Cormorant Garamond', serif;
-            font-size: clamp(1.1rem, 3.5vw, 1.5rem);
+            padding: 16px 40px;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 0.85rem;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 3px;
             font-weight: 600;
             border-radius: 50px;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 20px rgba(216, 45, 126, 0.4);
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            box-shadow: 0 10px 30px rgba(216, 45, 126, 0.3);
+            cursor: pointer;
         }
 
-        .enter-btn:active { transform: scale(0.95); }
+        .enter-btn:hover {
+            transform: scale(1.05);
+            box-shadow: 0 15px 40px rgba(216, 45, 126, 0.5);
+        }
 
-        /* --- ANIMATIONS --- */
         @keyframes zoomSlow {
             from { transform: scale(1); }
-            to { transform: scale(1.08); }
+            to { transform: scale(1.1); }
         }
 
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
+        }
+
+        @media (max-width: 480px) {
+            h1 { font-size: 3.8rem; }
+            .unit { width: 60px; height: 60px; }
         }
     </style>
 </head>
@@ -165,7 +167,7 @@
 <div class="bg-image"></div>
 
 <div class="intro-container">
-    <p class="label-top">Vous êtes invités au mariage de :</p>
+    <p class="subtitle">Nous allons nous dire Oui</p>
     <h1>Karen & Yossef</h1>
 
     <div class="countdown-container" id="timer">
@@ -175,13 +177,13 @@
         <div class="unit"><span class="num" id="secs">00</span><span class="label">Sec</span></div>
     </div>
 
-    <p class="date">14 . 06 . 2026</p>
+    <p class="date">14 JUIN 2026</p>
     <br>
-    <a href="invitation.html" class="enter-btn">Découvrir</a>
+    <a href="invitation.html" class="enter-btn">Voir l'invitation</a>
 </div>
 
 <script>
-    const targetDate = new Date("June 14, 2026 13:30:00").getTime();
+    const targetDate = new Date("June 14, 2026 16:30:00").getTime();
 
     function updateCountdown() {
         const now = new Date().getTime();
@@ -198,7 +200,7 @@
             document.getElementById("mins").innerText = m.toString().padStart(2, '0');
             document.getElementById("secs").innerText = s.toString().padStart(2, '0');
         } else {
-            document.getElementById("timer").innerHTML = "<h3 style='color:var(--coral); font-family:\"Cormorant Garamond\", serif;'>C'est le grand jour !</h3>";
+            document.getElementById("timer").innerHTML = "<h3 style='color:#fff; font-family:\"Great Vibes\", cursive; font-size: 2.5rem;'>C'est le grand jour !</h3>";
         }
     }
 
